# GraphiteThree

./: .gitmodules  CDT__2d_8h.html  CDT__2d_8h_source.html  CMakeLists.txt  CMakeOptions.txt.sample  CVT_8h.html  CVT_8h_source.html  FF_8h_source.html  FF__visu_8h_source.html  GLSL_8h.html  GLSL_8h.js  GLSL_8h_source.html  GLUPES_2fragment__shader_8h_source.html  GLUPES_2fragment__shader__utils_8h_source.html  GLUPES_2lines__fragment__shader_8h_source.html  GLUPES_2points__fragment__shader_8h_source.html  GLUPES_2points__vertex__shader_8h_source.html  GLUPES_2spheres__fragment__shader_8h_source.html  GLUPES_2spheres__vertex__shader_8h_source.html  GLUPES_2thick__lines__fragment__shader_8h_source.html  GLUPES_2thick__lines__vertex__shader_8h_source.html  GLUPES_2vertex__shader_8h_source.html  GLUPGLSL_2fragment__shader_8h_source.html  GLUPGLSL_2lines__fragment__shader_8h_source.html  GLUPGLSL_2points__fragment__shader_8h_source.html  GLUPGLSL_2points__vertex__shader_8h_source.html  GLUPGLSL_2spheres__fragment__shader_8h_source.html  GLUPGLSL_2spheres__vertex__shader_8h_source.html  GLUPGLSL_2thick__lines__fragment__shader_8h_source.html  GLUPGLSL_2thick__lines__vertex__shader_8h_source.html  GLUPGLSL_2vertex__shader_8h_source.html  GLUP_2fragment__shader__utils_8h_source.html  GLUP_8h.html  GLUP_8h.js  GLUP_8h_source.html  GLUP__context_8h.html  GLUP__context_8h.js  GLUP__context_8h_source.html  GLUP__context__ES_8h.html  GLUP__context__ES_8h_source.html  (+2740 more)
plugins/OGF/RayTracing/: CMakeLists.txt
plugins/OGF/RayTracing/.svn/: wc.db
plugins/OGF/RayTracing/common/: RayTracing_common.cpp  common.h
plugins/OGF/RayTracing/shaders/: mesh_grob_ray_tracing_shader.cpp  mesh_grob_ray_tracing_shader.h
plugins/OGF/WarpDrive/: CMakeLists.txt  README.txt  configure.bat  configure.sh
plugins/OGF/WarpDrive/IO/: hydra.h  read_hydra.h  xyzw_serializer.cpp  xyzw_serializer.h
plugins/OGF/WarpDrive/algo/: VSDM.cpp  VSDM.h  curlnoise.cpp  curlnoise.h  enright.cpp  enright.h  time_integrator.cpp  time_integrator.h  velocity_field.cpp  velocity_field.h  zalesak.cpp  zalesak.h
plugins/OGF/WarpDrive/commands/: mesh_grob_martingale_commands.cpp  mesh_grob_martingale_commands.h  mesh_grob_transport_commands.cpp  mesh_grob_transport_commands.h  voxel_grob_transport_commands.cpp  voxel_grob_transport_commands.h
plugins/OGF/WarpDrive/common/: WarpDrive_common.cpp  common.h
plugins/OGF/WarpDrive/interfaces/: mesh_grob_transport_interface.cpp  mesh_grob_transport_interface.h
plugins/OGF/WarpDrive/programming_examples/Lua/: TaylorRayleigh_2d.lua  TaylorRayleigh_2d_on_sphere.lua  TaylorRayleigh_3d.lua  TaylorRayleigh_3d_in_sphere.lua
plugins/OGF/WarpDrive/programming_examples/Python/: TaylorRayleigh_2d_in_python.py  Transport_2d_00_naive.py  Transport_2d_00_naive_standalone.py  Transport_2d_01_with_numpy.py  Transport_2d_02_with_jax.py  Transport_2d_in_python.py  Transport_2d_in_python_naive.py
plugins/OGF/WarpDrive/shaders/: aniso_mesh_grob_shader.cpp  aniso_mesh_grob_shader.h  cosmo_mesh_grob_shader.cpp  cosmo_mesh_grob_shader.h  transport_mesh_grob_shader.cpp  transport_mesh_grob_shader.h  voronoi_mesh_grob_shader.cpp  voronoi_mesh_grob_shader.h
plugins/OGF/gompy/: CMakeLists.txt
plugins/OGF/gompy/common/: common.h  gom_python_common.cpp
plugins/OGF/gompy/interpreter/: gom_python_callable.cpp  gom_python_callable.h  interop.cpp  interop.h  nl_vector_interop.cpp  nl_vector_interop.h  py_graphite_callable.cpp  py_graphite_callable.h  py_graphite_iterator.cpp  py_graphite_iterator.h  py_graphite_metaclass.cpp  py_graphite_metaclass.h  py_graphite_object.cpp  py_graphite_object.h  python.h  python_interpreter.cpp  python_interpreter.h  vec_mat_interop.cpp  vec_mat_interop.h
src/lib/OGF/basic/: CMakeLists.txt
src/lib/OGF/basic/common/: basic_common.cpp  common.h
src/lib/OGF/basic/math/: geometry.h
src/lib/OGF/basic/modules/: modmgr.cpp  modmgr.h  module.cpp  module.h
src/lib/OGF/basic/os/: file_manager.cpp  file_manager.h  stdio_compat.h  text_utils.cpp  text_utils.h
src/lib/OGF/basic/types/: basic_factory.h
src/lib/OGF/devel/: CMakeLists.txt
src/lib/OGF/devel/commands/: scene_graph_devel_commands.cpp  scene_graph_devel_commands.h
src/lib/OGF/devel/common/: common.h  devel_common.cpp
src/lib/OGF/devel/types/: module_maker.cpp  module_maker.h  properties.h
src/lib/OGF/gom/: CMakeLists.txt
src/lib/OGF/gom/codegen/: codegen.cpp  codegen.h
src/lib/OGF/gom/common/: common.h  gom_common.cpp
src/lib/OGF/gom/interpreter/: interpreter.cpp  interpreter.h
src/lib/OGF/gom/lua/: interop.cpp  interop.h  lua_callable.cpp  lua_callable.h  lua_graphite_object.cpp  lua_graphite_object.h  lua_interpreter.cpp  lua_interpreter.h  vec_mat_interop.cpp  vec_mat_interop.h
src/lib/OGF/gom/reflection/: dynamic_object.cpp  dynamic_object.h  dynamic_struct.cpp  dynamic_struct.h  meta.cpp  meta.h  meta_arg.cpp  meta_arg.h  meta_builtin.cpp  meta_builtin.h  meta_class.cpp  meta_class.h  meta_constructor.cpp  meta_constructor.h  meta_enum.cpp  meta_enum.h  meta_member.cpp  meta_member.h  meta_method.cpp  meta_method.h  meta_namespace.cpp  meta_namespace.h  meta_property.cpp  meta_property.h  meta_signal.cpp  meta_signal.h  meta_slot.cpp  meta_slot.h  meta_struct.cpp  meta_struct.h  meta_type.cpp  meta_type.h
src/lib/OGF/gom/services/: factory.cpp  factory.h  life_cycle.cpp  life_cycle.h  serializer.cpp  serializer.h
src/lib/OGF/gom/types/: any.cpp  any.h  arg_list.cpp  arg_list.h  callable.cpp  callable.h  connection.cpp  connection.h  gom.h  gom_defs.h  gom_implementation.h  node.cpp  node.h  object.cpp  object.h
src/lib/OGF/luagrob/: CMakeLists.txt
src/lib/OGF/luagrob/commands/: lua_grob_commands.cpp  lua_grob_commands.h
src/lib/OGF/mesh/: CMakeLists.txt
src/lib/OGF/mesh_gfx/: CMakeLists.txt
src/lib/OGF/renderer/: CMakeLists.txt
src/lib/OGF/scene_graph/: CMakeLists.txt
src/lib/OGF/scene_graph_gfx/: CMakeLists.txt
src/lib/OGF/skin/: CMakeLists.txt
src/lib/OGF/skin_imgui/: CMakeLists.txt
src/lib/OGF/voxel/: CMakeLists.txt
src/lib/OGF/voxel_gfx/: CMakeLists.txt
(+851 files in other folders)
